discussion/kv_engine/128645/128645_rev28_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-39042: Introduce Prometheus MetricServer

cb::prometheus::MetricServer encapsulates a prometheus-cpp Exposer.

On incoming scrape requests, a PrometheusStatCollector instance will be
used to gather stats, reusing some of the infrastructure used by
CMD_STAT.

TODO: Tie in auth once upstream changes are approved

Change-Id: I2c46729bb102d360dedc268b0fd26d935c654dcb

======================================================================================================================
COMMENTS
======================================================================================================================
Author: James H
Date: 2020-08-26 16:39:50.000000000
Message: 
Uploaded patch set 28.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-08-26 18:27:49.000000000
Message: 
Patch Set 28: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/4007/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/ep_engine.cc:413:26: error: assigning to "ENGINE_ERROR_CODE" from incompatible type "void" [clang-diagnostic-error]
            if (status = doTimingStats(collector); status != ENGINE_SUCCESS) {
                         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/ep_engine.cc:413:76: error: expected ";" after expression [clang-diagnostic-error]
            if (status = doTimingStats(collector); status != ENGINE_SUCCESS) {
                                                                           ^
                                                                           ;
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/ep_engine.cc:413:76: error: expected expression [clang-diagnostic-error]

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/4007/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/ep_engine.cc:413:26:
error: assigning to "ENGINE_ERROR_CODE" from incompatible type "void" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/4007/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/29797/ : FAILURE

Link error: fatal error LNK1168: cannot open platform\platform_so.dll for writing ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/29797/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/25828/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/include/statistics/stats.def.h:66:10:
fatal error: "stats_config.def.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/25828/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/4336/ : FAILURE

Compile error at [2020-08-26T16:43:11.613Z] ../kv_engine/engines/ep/src/ep_engine.cc:413:26:
error: assigning to "ENGINE_ERROR_CODE" from incompatible type "void"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/4336/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/5417/ : FAILURE

Compile error at [2020-08-26T18:10:33.015Z] ../kv_engine/include/statistics/stats.def.h:66:10:
fatal error: stats_config.def.h: No such file or directory
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/5417/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/5225/ : FAILURE

Compile error at [2020-08-26T17:43:20.671Z] ../kv_engine/include/statistics/stats.def.h:66:10:
fatal error: stats_config.def.h: No such file or directory
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/5225/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/5314/ : FAILURE

Compile error at [2020-08-26T17:32:50.484Z] ../kv_engine/include/statistics/stats.def.h:66:10:
fatal error: stats_config.def.h: No such file or directory
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/5314/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/13135/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/2533/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
